# cpp-exercies

./: CMakeLists.txt  README.md  main.cpp  random_dates.txt  tests.cpp
date/: CMakeLists.txt  date.cpp  date.hpp  main.cpp
inc/: date.hpp
src/: date.cpp
